# testthepypi

./: README.md  setup.cfg
testthepypi/: __init__.py  doit.py
