
[metadata]
name = testthepypi
version = attr: testthepypi.__version__
author = DocGarbanzo
url = https://github.com/DocGarbanzo/testthepypi
description = Testing the PyPI
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testthepypi, setuptools
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
testthepypi = *.html, *.ini, *.tar.gz, *.txt

[options.entry_points]
console_scripts =
    testthepypi = testthepypi.doit:main